--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h1{
     text-align:left;
     margin-top: 80px;
     padding: 20px;
-    width: 80%;
+    width: 270px;
 }
 
 .vr-logo img{
@@ -95,8 +95,9 @@ h2{
     font-weight: 300;
     color: hsl(0, 0%, 0%);
     text-align: center;
- margin: 20px 0 20px; 
+ margin: 20px auto 20px; 
  letter-spacing: 1.5px;
+ max-width: 80%;
 }
 .interactive-container p{
     font-family: 'Alata', sans-serif;
@@ -105,6 +106,7 @@ h2{
     text-align: center;
     margin: 0 auto;
     width: 85%;
+    max-width: 270px;
 }
 main > h2:nth-of-type(1) {
 margin-top: 100px;
@@ -194,3 +196,9 @@ footer p{
 }
  .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
+@media(min-width: 375px){
+/* h1{
+    font-size: 2.3rem;
+} */
+}
