--- a/style.css
+++ b/style.css
@@ -197,8 +197,25 @@ footer p{
  .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
 
-@media(min-width: 375px){
-/* h1{
-    font-size: 2.3rem;
-} */
+@media(min-width: 767px){
+h2 {
+    font-size: 2.8rem;
+    max-width: 60%;
+    letter-spacing: 2px;
+}
+.interactive-container p {
+    font-size: 1.4rem;
+    max-width: 400px;
+}
+h3 {
+  bottom: 65px;
+  left: 70px;
+  font-size: 2rem;
+  max-width: 170px;
+} 
+.see-all{
+   
+    font-size: 1rem;
+    width: 200px;
+}
 }
